[gd_scene load_steps=5 format=3 uid="uid://cyp1mrc8tu0df"]

[ext_resource type="Script" path="res://Dice Models/xy_room_dice.gd" id="1_kusca"]
[ext_resource type="PackedScene" uid="uid://c1sbbpswt68eq" path="res://Dice Models/X Dim Die/D X Dim.tscn" id="2_57f71"]
[ext_resource type="PackedScene" uid="uid://ua53ly3yv0sv" path="res://Dice Models/Y Dim Die/D Y Dim.tscn" id="3_u3gvs"]
[ext_resource type="PackedScene" uid="uid://dwlkevdio50dl" path="res://Dice Models/Door Pics/die_door_pics.tscn" id="4_333yy"]

[node name="XYRoomDice" type="Node3D"]
script = ExtResource("1_kusca")

[node name="DXDim" parent="." instance=ExtResource("2_57f71")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.1, 0, 0)

[node name="DYDim" parent="." instance=ExtResource("3_u3gvs")]

[node name="Die Door Pics" parent="." instance=ExtResource("4_333yy")]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 1.1, 0, 0)
collision_layer = 2
collision_mask = 3

[connection signal="roll_xy_dice" from="." to="DXDim" method="_on_xy_room_dice_roll_xy_dice"]
[connection signal="roll_xy_dice" from="." to="DYDim" method="_on_xy_room_dice_roll_xy_dice"]
[connection signal="roll_finished" from="DXDim" to="." method="_on_dx_dim_roll_finished"]
[connection signal="roll_started" from="DXDim" to="." method="_on_dx_dim_roll_started"]
[connection signal="roll_finished" from="DYDim" to="." method="_on_dy_dim_roll_finished"]
