[gd_scene load_steps=20 format=3 uid="uid://dx5jaq5nccohx"]

[ext_resource type="Script" path="res://world.gd" id="1_8c8ky"]
[ext_resource type="PackedScene" uid="uid://dwlkevdio50dl" path="res://Dice Models/Door Pics/die_door_pics.tscn" id="2_doy3w"]
[ext_resource type="Script" path="res://Dice Models/xy_room_dice.gd" id="2_hv46p"]
[ext_resource type="PackedScene" uid="uid://mnm1600ha20s" path="res://Dice Models/Door Locked/die_locked.tscn" id="4_wvsjv"]
[ext_resource type="PackedScene" uid="uid://b5m3t0qb8cysk" path="res://Dice Models/Left Right Center Die/die_lcr.tscn" id="4_yene3"]
[ext_resource type="Script" path="res://Dice Models/Die Roll Reference.gd" id="5_be0xo"]
[ext_resource type="PackedScene" uid="uid://c1sbbpswt68eq" path="res://Dice Models/X Dim Die/D X Dim.tscn" id="5_rrt17"]
[ext_resource type="PackedScene" uid="uid://ua53ly3yv0sv" path="res://Dice Models/Y Dim Die/D Y Dim.tscn" id="6_pkkkg"]
[ext_resource type="PackedScene" uid="uid://4jtmcfbcxwts" path="res://Dice Models/Secondary Num Add/D Secondary Add Num.tscn" id="9_7pahk"]
[ext_resource type="PackedScene" uid="uid://xh1dxg5lm7mp" path="res://Dice Models/Primary Num Add/D Primary Add Num.tscn" id="10_whr8r"]
[ext_resource type="PackedScene" uid="uid://crf5mdkv3587n" path="res://Dice Models/Primary Num/die_numbered_primary.tscn" id="11_xvj32"]
[ext_resource type="PackedScene" uid="uid://osco2cs718d7" path="res://Dice Models/Secondary Num/die_numbered_secondary.tscn" id="12_lylh5"]

[sub_resource type="Environment" id="Environment_ospvs"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_bmajt"]

[sub_resource type="BoxMesh" id="BoxMesh_dtie3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u08sl"]
albedo_color = Color(0.628852, 0.0198293, 0, 1)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_4piwt"]
friction = 0.24
bounce = 0.44

[sub_resource type="BoxShape3D" id="BoxShape3D_a2wnj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2bp57"]
friction = 0.25
bounce = 0.1

[node name="world" type="Node3D"]
script = ExtResource("1_8c8ky")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="CenterLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60

[node name="XResultLabel" type="Label" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 60

[node name="XResultAddLabel" type="Label" parent="CanvasLayer"]
offset_left = 180.0
offset_right = 220.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 60

[node name="YResultLabel" type="Label" parent="CanvasLayer"]
offset_top = 60.0
offset_right = 40.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 60

[node name="YResultAddLabel" type="Label" parent="CanvasLayer"]
offset_left = 180.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 143.0
theme_override_font_sizes/font_size = 60

[node name="Cam n Lights" type="Node" parent="."]

[node name="Camera3D" type="Camera3D" parent="Cam n Lights"]
transform = Transform3D(1, 0, 0, 0, 0.329246, 0.944244, 0, -0.944244, 0.329246, 0, 39.4538, 15.6398)
environment = SubResource("Environment_ospvs")
attributes = SubResource("CameraAttributesPractical_bmajt")
fov = 35.7681
near = 0.094
far = 4008.3

[node name="SpotLight3D" type="SpotLight3D" parent="Cam n Lights"]
transform = Transform3D(0.970577, -0.0601344, 0.23316, -0.19156, 0.393853, 0.898991, -0.145891, -0.917204, 0.370746, 11.2829, 32.8321, 9.90357)
light_energy = 11.44
light_indirect_energy = 5.0
spot_range = 55.6525
spot_attenuation = 0.683019
spot_angle = 34.0316

[node name="SpotLight3D2" type="SpotLight3D" parent="Cam n Lights"]
transform = Transform3D(-0.61177, 0.56018, -0.558512, -0.263863, 0.521102, 0.811683, 0.74573, 0.643934, -0.170984, -10.8563, 13.3595, -0.213244)
light_energy = 12.444
light_indirect_energy = 5.111
spot_range = 72.7776
spot_angle = 57.98
spot_angle_attenuation = 0.87055

[node name="DiceTray" type="Node3D" parent="."]

[node name="TrayModel" type="Node3D" parent="DiceTray"]

[node name="TableBackstop" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(20, 0, 0, 0, 8.48316, 0.52949, 0, -5.2949, 0.848316, 0, 0.384173, -11.6613)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/TableBackstop"]
physics_material_override = SubResource("PhysicsMaterial_4piwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/TableBackstop/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="TableRight" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(0.804044, 5.9457, 0, -0.59457, 8.04044, 0, 0, 0, 20, 4.05623, 0.447713, -3.80624)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/TableRight"]
physics_material_override = SubResource("PhysicsMaterial_4piwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/TableRight/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="TableLeft" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(0.848011, -5.29978, 0, 0.529978, 8.48011, 0, 0, 0, 20, -4.43083, 0.559001, -3.45424)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/TableLeft"]
physics_material_override = SubResource("PhysicsMaterial_4piwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/TableLeft/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="TableFront" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(25, 0, 0, 0, 7.5, -0.866025, 0, 12.9904, 0.5, 0, 2.99028, 3.39619)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/TableFront"]
physics_material_override = SubResource("PhysicsMaterial_4piwt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/TableFront/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="DiceTrayBottom" type="MeshInstance3D" parent="DiceTray/TrayModel"]
transform = Transform3D(75, 0, 0, 0, 2, 0, 0, 0, 50, 0, -1, 0)
mesh = SubResource("BoxMesh_dtie3")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_u08sl")

[node name="StaticBody3D" type="StaticBody3D" parent="DiceTray/TrayModel/DiceTrayBottom"]
physics_material_override = SubResource("PhysicsMaterial_2bp57")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DiceTray/TrayModel/DiceTrayBottom/StaticBody3D"]
visible = false
shape = SubResource("BoxShape3D_a2wnj")

[node name="RoomSizeDice" type="Node3D" parent="DiceTray"]
script = ExtResource("2_hv46p")

[node name="DXDim" parent="DiceTray/RoomSizeDice" instance=ExtResource("5_rrt17")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.16644, 6.7, 4.23277)
collision_mask = 127

[node name="DYDim" parent="DiceTray/RoomSizeDice" instance=ExtResource("6_pkkkg")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.17562, 6.7, 5.42878)
collision_mask = 127

[node name="Die Door Pics" parent="DiceTray/RoomSizeDice" instance=ExtResource("2_doy3w")]
transform = Transform3D(-1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, -1.17752, 6.7, 6.43633)
collision_layer = 2
collision_mask = 127
script = ExtResource("5_be0xo")

[node name="RoomSizeAddDice" type="Node3D" parent="DiceTray"]

[node name="Die LCR" parent="DiceTray" instance=ExtResource("4_yene3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.052453, 6.7, 6.47695)
collision_layer = 8
collision_mask = 127
freeze = true

[node name="Die Locked" parent="DiceTray" instance=ExtResource("4_wvsjv")]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 1.11512, 6.7, 6.45848)
collision_layer = 16
collision_mask = 127

[node name="RoomButtonContainer" type="GridContainer" parent="DiceTray"]
visibility_layer = 4
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="XYPickUpButton" type="Button" parent="DiceTray/RoomButtonContainer"]
visibility_layer = 8
layout_mode = 2

[node name="XYAddPickUpButton" type="Button" parent="DiceTray/RoomButtonContainer"]
visibility_layer = 16
layout_mode = 2

[node name="DSecondaryAddNum" parent="." instance=ExtResource("9_7pahk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.130424, 6.66527, 5.47761)
collision_mask = 127

[node name="DPrimaryAddNum" parent="." instance=ExtResource("10_whr8r")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.121589, 6.58708, 4.157)
collision_mask = 127

[node name="Die Numbered Primary" parent="." instance=ExtResource("11_xvj32")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.09545, 6.54232, 4.19431)
collision_layer = 32
collision_mask = 127

[node name="Die Numbered Secondary" parent="." instance=ExtResource("12_lylh5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.08483, 6.57364, 5.4103)
collision_layer = 64
collision_mask = 127

[connection signal="roll_xy_dice" from="DiceTray/RoomSizeDice" to="DiceTray/RoomSizeDice/DXDim" method="_on_room_dimension_dice_roll_xy_dice"]
[connection signal="roll_xy_dice" from="DiceTray/RoomSizeDice" to="DiceTray/RoomSizeDice/DYDim" method="_on_room_dimension_dice_roll_xy_dice"]
[connection signal="roll_xy_dice" from="DiceTray/RoomSizeDice" to="DiceTray/RoomSizeDice/Die Door Pics" method="_on_room_dimension_dice_roll_xy_dice"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DXDim" to="DiceTray/RoomSizeDice" method="_on_dx_dim_input_event"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/DYDim" to="DiceTray/RoomSizeDice" method="_on_dy_dim_input_event"]
[connection signal="input_event" from="DiceTray/RoomSizeDice/Die Door Pics" to="DiceTray/RoomSizeDice" method="_on_die_door_pics_input_event"]
[connection signal="sleeping_state_changed" from="DiceTray/RoomSizeDice/Die Door Pics" to="DiceTray/RoomSizeDice/Die Door Pics" method="_on_sleeping_state_changed"]
